# ShowierCommuntiyBot

./: .breakpoints  .gitignore  README.md  bank.json  cleanuplogs.py  keep_alive.py  main.py  mainbank.json  pyproject.toml  reload.py  rerun.bash  update.py  users.json
Twosided bot/: keep_alive.py  main.py
Twosided bot/cogs/: Commands.py
cogs/: Commands.py  cog_example.py  ecom.py
cogs/levling/: leveling.py  levelingfunc.py
logs/msglogs/: 1642733467.9062212
