[tool.poetry]
name = "TwoSidedBot"
version = "1.1.0"
description = ""
authors = ["showierdata9978 <<>>"]
license = "apachee"

[tool.poetry.dependencies]
python = "^3.8"

Flask = "^2.0.2"
nextcord = "^2.0.0-alpha.6"
aiohttp = "^3.8.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
